[package]
name = "prometheus_parquet_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
zip-extensions = "0.6"
parquet = "7.0.0"
tempfile = "3.3.0"
promql = "0.4.2"
serde = {version="1.0.136", features=["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
color-eyre = "0.6.1"
regex = "1.5.5"
lazy_static = "1.4.0"
bimap = "0.6.2"
itertools = "0.10.2"
axum = "0.5.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-tower = "0.6.0"
tower-http = { version = "0.1", features = ["full"] }
chrono = "0.4.19"
clap = {version = "3.1.18", features = ["derive"]}